--- a/index.html
+++ b/index.html
@@ -4,10 +4,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
-  <link rel="stylesheet" href="./assets/css/style.css" />
-  <body>
-    <h1>Egor Developer</h1>
+  <body class="wrapper">
+    <header class="header">
+      <h1 class="header-logo">Egor developer</h1>
+      <div class="header-nav">
+        <div class="header-menu">
+          <h3 class="header-menu item">About</h3>
+          <h3 class="header-menu item">Skills</h3>
+          <h3 class="header-menu item">Services</h3>
+          <h3 class="header-menu item">Portfolio</h3>
+        </div>
+        <div class="header-theme"></div>
+      </div>
+    </header>
+    <h1>Egor</h1>
     <h2>about</h2>
     <h3>SKILLS</h3>
     <h4>Education</h4>
