--- a/index.html
+++ b/index.html
@@ -18,14 +18,33 @@
         </div>
         <div class="header-theme"></div>
       </div>
-    </header>
+</header>
     <h1>Egor</h1>
     <h2>about</h2>
     <h3>SKILLS</h3>
     <h4>Education</h4>
     <h5>computer Engineer</h5>
     <h6>2009-2015</h6>
-    <button>Demo</button>
-    <button>Contact me</button>
+    <button class="btn-demo">Demo</button>
+    
+    <main class="main">
+      <aside class="sidebar">
+        <img src="" alt="" class="sidebar-photo"></img>
+        <div class="sidebar-titles">
+          <div class="sidebar-titles h2"></div>
+          <div class="sidebar-titles h4"></div>
+        </div>
+        <p>High level experience in web desighn and development knowledge</p>
+        <div class="sidebar-links">
+          <a href=""> <img src="" alt=""></a>
+          <a href=""> <img src="" alt=""></a>
+          <a href=""> <img src="" alt=""></a>
+          <a href=""> <img src="" alt=""></a>
+          <a href=""> <img src="" alt=""></a>
+        </div>
+        <button class="btn-contanct">Contact me</button>
+      </aside>
+
+    </main>
   </body>
 </html>
