--- a/index.html
+++ b/index.html
@@ -18,33 +18,35 @@
         </div>
         <div class="header-theme"></div>
       </div>
-</header>
-    <h1>Egor</h1>
-    <h2>about</h2>
-    <h3>SKILLS</h3>
-    <h4>Education</h4>
-    <h5>computer Engineer</h5>
-    <h6>2009-2015</h6>
-    <button class="btn-demo">Demo</button>
-    
+    </header>
+
     <main class="main">
       <aside class="sidebar">
-        <img src="" alt="" class="sidebar-photo"></img>
+        <img
+          src="./assets/images/icons/face.svg"
+          alt=""
+          class="sidebar-photo"
+        />
         <div class="sidebar-titles">
-          <div class="sidebar-titles h2"></div>
-          <div class="sidebar-titles h4"></div>
+          <div class="sidebar-titles h2">Заголовок 2</div>
+          <div class="sidebar-titles h4">Заголовок 4</div>
         </div>
         <p>High level experience in web desighn and development knowledge</p>
         <div class="sidebar-links">
-          <a href=""> <img src="" alt=""></a>
-          <a href=""> <img src="" alt=""></a>
-          <a href=""> <img src="" alt=""></a>
-          <a href=""> <img src="" alt=""></a>
-          <a href=""> <img src="" alt=""></a>
+          <a href="">
+            <img src="./assets/images/icons/facebook.svg" alt=""
+          /></a>
+          <a href=""> <img src="./assets/images/icons/github.svg" alt="" /></a>
+          <a href="">
+            <img src="./assets/images/icons/instagram.svg" alt=""
+          /></a>
+          <a href=""> <img src="./assets/images/icons/twitter.svg" alt="" /></a>
+          <a href="">
+            <img src="./assets/images/icons/telegram.svg" alt=""
+          /></a>
+          <a href=""> <img src="./assets/images/icons/vk.svg" alt="" /></a>
         </div>
-        <button class="btn-contanct">Contact me</button>
       </aside>
-
     </main>
   </body>
 </html>
