--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
           class="sidebar-photo"
         />
         <div class="sidebar-titles">
-          <div class="sidebar-titles h2">Заголовок 2</div>
-          <div class="sidebar-titles h4">Заголовок 4</div>
+          <h2>Заголовок 2</h2>
+          <h4>Заголовок 4</h4>
         </div>
         <p>High level experience in web desighn and development knowledge</p>
         <div class="sidebar-links">
@@ -46,7 +46,42 @@
           /></a>
           <a href=""> <img src="./assets/images/icons/vk.svg" alt="" /></a>
         </div>
+        <button class="btn-contanct">Contact me</button>
       </aside>
+      <main class="page-about">
+        <section class="page-about_about">
+          <h2>About</h2>
+          <p>Web developer, with extensive knowledge 
+            and years of experience, 
+            working in web technologies and 
+            UI/UX design, delivering quality work.</p>
+            <div class="about-info">
+              <article class="years">
+                <img src="./assets/images/icons/years.svg" 
+                alt="" />
+                <div class="year_card-bottom">
+                   <h5> years experience</h5>
+                   <h2>6</h2>
+                  </div>
+              </article>
+              <article class="years">
+                <img src="./assets/images/icons/books.svg" 
+                alt="" />
+                <div class="year_card-bottom">
+                   <h5> projects </h5>
+                   <h2>1</h2>
+                  </div></article>
+              <article class="years">
+                <img src="./assets/images/icons/house.svg" 
+                alt="" />
+                <div class="year_card-bottom">
+                   <h5> companies worked</h5>
+                   <h2>4</h2>
+                  </div></article>
+            </div>
+        </section>
+        <section class="page-about-qualific"></section>
+      </main>
     </main>
   </body>
 </html>
