--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
               <article class="years">
                 <img src="./assets/images/icons/house.svg" 
                 alt="" />
+                <h3>Education</h3>
                 <div class="year_card-bottom">
                    <h5> companies worked</h5>
                    <h2>4</h2>
@@ -81,6 +82,20 @@
             </div>
         </section>
         <section class="page-about-qualific"></section>
+      </main>
+      <main class="qualification">
+        <section class="qualification-about">
+          <h2>Qualification</h2>
+          <p>My personal journal</p>
+          <img src="./assets/images/icons/education.svg" alt="">
+          <div class="qualification-page">
+            <article class="development">
+            <h5>computer enginering</h5>
+            <h5>moskow university</h5>
+            <h6>2008-2014</h6>
+            </article>
+          </div>
+        </section>
       </main>
     </main>
   </body>
