--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
       <h1 class="header-logo">Egor developer</h1>
       <div class="header-nav">
         <div class="header-menu">
-          <h3 class="header-menu item">About</h3>
-          <h3 class="header-menu item">Skills</h3>
-          <h3 class="header-menu item">Services</h3>
-          <h3 class="header-menu item">Portfolio</h3>
+          <h3 class="header-menu-item">About</h3>
+          <h3 class="header-menu-item">Skills</h3>
+          <h3 class="header-menu-item">Services</h3>
+          <h3 class="header-menu-item">Portfolio</h3>
         </div>
         <div class="header-theme"></div>
       </div>
@@ -74,29 +74,46 @@
               <article class="years">
                 <img src="./assets/images/icons/house.svg" 
                 alt="" />
-                <h3>Education</h3>
                 <div class="year_card-bottom">
                    <h5> companies worked</h5>
                    <h2>4</h2>
                   </div></article>
             </div>
-        </section>
-        <section class="page-about-qualific"></section>
-      </main>
-      <main class="qualification">
-        <section class="qualification-about">
+        </section><section class="qualification-about">
           <h2>Qualification</h2>
           <p>My personal journal</p>
-          <img src="./assets/images/icons/education.svg" alt="">
+          <article class="pict">
+            <img src="./assets/images/icons/education.svg" alt="">
+            <h4> Education</h4> 
+            <img src="./assets/images/icons/books.svg" alt="">
+            <h4>Work</h4> 
+            <div class="qualification-page">
+            </article>
           <div class="qualification-page">
             <article class="development">
             <h5>computer enginering</h5>
             <h5>moskow university</h5>
             <h6>2008-2014</h6>
             </article>
+            <article class="development">
+              <h5>web desing</h5>
+              <h5>moskow university</h5>
+              <h6>2014-2016</h6>
+              </article>
+              <article class="development">
+                <h5>web development</h5>
+                <h5>moskow university</h5>
+                <h6>2016-2018</h6>
+                </article>
+                <article class="development">
+                  <h5>master</h5>
+                  <h5>moskow university</h5>
+                  <h6>2018-2022</h6>
+                  </article>
           </div>
         </section>
       </main>
+
     </main>
   </body>
 </html>
