--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>portfolio card</title>
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body class="wrapper">
@@ -19,7 +19,6 @@
         <div class="header-theme"></div>
       </div>
     </header>
-
     <main class="main">
       <aside class="sidebar">
         <img
