--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>portfolio card</title>
     <link rel="stylesheet" href="./assets/css/style.css" />
+    <script defer src="./assets/js/index.js"></script>
   </head>
   <body class="wrapper">
     <header class="header">
@@ -50,69 +51,67 @@
       <main class="page-about">
         <section class="page-about_about">
           <h2>About</h2>
-          <p>Web developer, with extensive knowledge 
-            and years of experience, 
-            working in web technologies and 
-            UI/UX design, delivering quality work.</p>
-            <div class="about-info">
-              <article class="years">
-                <img src="./assets/images/icons/years.svg" 
-                alt="" />
-                <div class="year_card-bottom">
-                   <h5> years experience</h5>
-                   <h2>6</h2>
-                  </div>
-              </article>
-              <article class="years">
-                <img src="./assets/images/icons/books.svg" 
-                alt="" />
-                <div class="year_card-bottom">
-                   <h5> projects </h5>
-                   <h2>1</h2>
-                  </div></article>
-              <article class="years">
-                <img src="./assets/images/icons/house.svg" 
-                alt="" />
-                <div class="year_card-bottom">
-                   <h5> companies worked</h5>
-                   <h2>4</h2>
-                  </div></article>
-            </div>
-        </section><section class="qualification-about">
-          <h2>Qualification</h2>
-          <p>My personal journal</p>
-          <article class="pict">
-            <img src="./assets/images/icons/education.svg" alt="">
-            <h4> Education</h4> 
-            <img src="./assets/images/icons/books.svg" alt="">
-            <h4>Work</h4> 
-            <div class="qualification-page">
+          <p>
+            Web developer, with extensive knowledge and years of experience,
+            working in web technologies and UI/UX design, delivering quality
+            work.
+          </p>
+          <div class="about-info">
+            <article class="years">
+              <img src="./assets/images/icons/years.svg" alt="" />
+              <div class="year_card-bottom">
+                <h5>years experience</h5>
+                <h2>6</h2>
+              </div>
             </article>
+            <article class="years">
+              <img src="./assets/images/icons/books.svg" alt="" />
+              <div class="year_card-bottom">
+                <h5>projects</h5>
+                <h2>1</h2>
+              </div>
+            </article>
+            <article class="years">
+              <img src="./assets/images/icons/house.svg" alt="" />
+              <div class="year_card-bottom">
+                <h5>companies worked</h5>
+                <h2>4</h2>
+              </div>
+            </article>
+          </div>
+        </section>
+        <section class="qualification-about">
+          <h2>Qualification</h2>
+          <article class="pict">
+            <img src="./assets/images/icons/education.svg" alt="" />
+            <h4>Education</h4>
+            <img src="./assets/images/icons/books.svg" alt="" />
+            <h4>Work</h4>
+          </article>
           <div class="qualification-page">
             <article class="development">
-            <h5>computer enginering</h5>
-            <h5>moskow university</h5>
-            <h6>2008-2014</h6>
+              <h5>computer enginering</h5>
+              <h5>moskow university</h5>
+              <h6>2008-2014</h6>
             </article>
             <article class="development">
               <h5>web desing</h5>
               <h5>moskow university</h5>
               <h6>2014-2016</h6>
-              </article>
-              <article class="development">
-                <h5>web development</h5>
-                <h5>moskow university</h5>
-                <h6>2016-2018</h6>
-                </article>
-                <article class="development">
-                  <h5>master</h5>
-                  <h5>moskow university</h5>
-                  <h6>2018-2022</h6>
-                  </article>
+            </article>
+            <article class="development">
+              <h5>web development</h5>
+              <h5>moskow university</h5>
+              <h6>2016-2018</h6>
+            </article>
+            <article class="development">
+              <h5>master</h5>
+              <h5>moskow university</h5>
+              <h6>2018-2022</h6>
+            </article>
           </div>
         </section>
       </main>
-
     </main>
   </body>
 </html>
