--- a/index.html
+++ b/index.html
@@ -83,10 +83,14 @@
         <section class="qualification-about">
           <h2>Qualification</h2>
           <article class="pict">
-            <img src="./assets/images/icons/education.svg" alt="" />
-            <h4>Education</h4>
-            <img src="./assets/images/icons/books.svg" alt="" />
-            <h4>Work</h4>
+            <div id="education">
+              <img src="./assets/images/icons/education.svg" alt="" />
+              <h4>Education</h4>
+            </div>
+            <div id="work">
+              <img src="./assets/images/icons/books.svg" alt="" />
+              <h4>Work</h4>
+            </div>
           </article>
           <div class="qualification-page">
             <article class="development">
