--- a/site/site.html
+++ b/site/site.html
@@ -29,9 +29,12 @@
           <h6>40$</h6>
           <button>Купить</button>
         </article>
-      </div>
+      </div> 
       <title>Timer</title>
-
+    <button class="start">Start</button>
+    <input class="input-time" type="text" placeholder="часы"class="input-time"/>
+    <input  class="input-time" type="text" placeholder="минуты"/>
+    <input class="input-time" type="text" placeholder="секунды"/>
       <h1>Timer</h1>
       <div class="timer">
         <h2 id="hours">00</h2>
